preparing first version

--- a/_posts/2009-09-03-owp17.md
+++ b/_posts/2009-09-03-owp17.md
@@ -5,14 +5,14 @@ author: Christian Scholz
 post_date: 2009-09-03 20:18:19
 post_excerpt: ""
 layout: post
-permalink: http://openwebpodcast.de/171/owp17/
+permalink: /171/owp17/
 published: true
 enclosure:
   - |
     http://openwebpodcast.de/mp3/openweb17.mp3
     54110336
     audio/mpeg
-    
+
 ---
 Es ist ein bisschen was passiert obwohl Herr Pfefferle im Urlaub weilt. Und daher haben wir uns entschlossen, eine Urlaubsfolge einzulegen und mal über all die News zu sprechen! Und diesmal schaffen wir es auch in nur 1 Stunde!
 
