--- a/_posts/2009-09-30-owp18.md
+++ b/_posts/2009-09-30-owp18.md
@@ -5,14 +5,14 @@ author: Christian Scholz
 post_date: 2009-09-30 16:11:29
 post_excerpt: ""
 layout: post
-permalink: http://openwebpodcast.de/177/owp18/
+permalink: /177/owp18/
 published: true
 enclosure:
   - |
     http://openwebpodcast.de/mp3/openweb18.mp3
     77111424
     audio/mpeg
-    
+
 ---
 In dieser Folge geht es um die Frage, wie offen deutsche soziale Netzwerke sind. Erste Erkenntnis: Nicht so! Aber ob sie es werden wollen, darüber diskutieren wir aufbauend auf dem Panel "Walled Gardens vs. Open Platform" vom Community Summit in Hamburg, das Christian moderierte und das ansonsten mit Sebastian Galonska von studivz und Jason Goldberg von Xing besetzt war.
 
