--- a/_posts/2009-10-07-owp19.md
+++ b/_posts/2009-10-07-owp19.md
@@ -5,14 +5,14 @@ author: Christian Scholz
 post_date: 2009-10-07 12:16:24
 post_excerpt: ""
 layout: post
-permalink: http://openwebpodcast.de/187/owp19/
+permalink: /187/owp19/
 published: true
 enclosure:
   - |
     http://openwebpodcast.de/mp3/openweb19.mp3
     77801600
     audio/mpeg
-    
+
 ---
 Letzte Woche haben 100.000 Menschen und diejenigen, die sie eingeladen haben, einen Account bei Google Wave bekommen. Bald werden es sicherlich noch mehr werden. Zeit also für uns, eine ganze Folge zu Google Wave zu machen.
 
