--- a/_posts/2009-10-25-owp21.md
+++ b/_posts/2009-10-25-owp21.md
@@ -5,14 +5,14 @@ author: Christian Scholz
 post_date: 2009-10-25 16:44:23
 post_excerpt: ""
 layout: post
-permalink: http://openwebpodcast.de/230/owp21/
+permalink: /230/owp21/
 published: true
 enclosure:
   - |
     http://openwebpodcast.de/mp3/openweb21.mp3
     70865024
     audio/mpeg
-    
+
 ---
 Der OpenWeb-Podcast wird ein Jahr alt, wer hätte das gedacht? Wir natürlich! Daher feiern wir uns und schauen zurück. Ausserdem gibt es ganz viele Hausaufgaben für euch!
 
