--- a/_posts/2009-12-24-owp23.md
+++ b/_posts/2009-12-24-owp23.md
@@ -5,14 +5,14 @@ author: Christian Scholz
 post_date: 2009-12-24 09:00:11
 post_excerpt: ""
 layout: post
-permalink: http://openwebpodcast.de/244/owp23/
+permalink: /244/owp23/
 published: true
 enclosure:
   - |
     http://openwebpodcast.de/mp3/openweb23.mp3
     86403200
     audio/mpeg
-    
+
 ---
 Das OpenWeb-Podcast Team (Sebastian, Christian und Matthias) wünschen euch frohe Weihnachten und einen guten Rutsch ins neue Jahr und damit es euch zwischen den Feiertagen nicht so langweilig wird, haben wir die Folge etwas in die Länge gezogen :)
 
