--- a/_posts/2010-02-12-episode-24%e2%80%93foafssl.md
+++ b/_posts/2010-02-12-episode-24%e2%80%93foafssl.md
@@ -5,14 +5,14 @@ author: Matthias Pfefferle
 post_date: 2010-02-12 00:15:45
 post_excerpt: ""
 layout: post
-permalink: 'http://openwebpodcast.de/283/episode-24%e2%80%93foafssl/'
+permalink: '/283/episode-24%e2%80%93foafssl/'
 published: true
 enclosure:
   - |
     http://openwebpodcast.de/mp3/openweb25.mp3
     49787008
     audio/mpeg
-    
+
 ---
 Nach einer kleinen Abstinenz haben wir diesmal, wie versprochen, wieder ein Thema. Mario Volke (<a href="http://www.webholics.de/">Webholics</a>) hat uns das Thema <a href="http://esw.w3.org/topic/foaf+ssl"><strong>FoaF+SSL</strong></a> vorgeschlagen, vorbereitet und erklärt uns in der aktuellen Folge wie es funktioniert :)
 
