--- a/_posts/2010-04-21-owp27.md
+++ b/_posts/2010-04-21-owp27.md
@@ -5,14 +5,14 @@ author: Christian Scholz
 post_date: 2010-04-21 18:49:26
 post_excerpt: ""
 layout: post
-permalink: http://openwebpodcast.de/332/owp27/
+permalink: /332/owp27/
 published: true
 enclosure:
   - |
     http://openwebpodcast.de/mp3/openweb27.mp3
     57059456
     audio/mpeg
-    
+
 ---
 Es gab mal wieder einige News, die sich so angesammelt haben. Daher also eine reine News-Folge. Es geht um OAuth 2.0, um die Twitter-Konferenz Chirp und natürlich auch um Datenschutz und Facebook!
 
