--- a/_posts/2010-05-02-owp28.md
+++ b/_posts/2010-05-02-owp28.md
@@ -5,14 +5,14 @@ author: Matthias Pfefferle
 post_date: 2010-05-02 12:49:12
 post_excerpt: ""
 layout: post
-permalink: http://openwebpodcast.de/337/owp28/
+permalink: /337/owp28/
 published: true
 enclosure:
   - |
     http://openwebpodcast.de/mp3/openweb28.mp3
     57352320
     audio/mpeg
-    
+
 ---
 Wir widmen uns diesmal fast ausschließlich der <a href="http://www.facebook.com/f8">f8</a> Ankündigungen. Ist <a href="http://www.facebook.com/">Facebook</a> jetzt offener? Ist die API simpler? Kommt man an mehr Infos? Wie sieht es mit offenen Standards aus? usw...
 
