--- a/_posts/2010-05-23-owp29.md
+++ b/_posts/2010-05-23-owp29.md
@@ -5,14 +5,14 @@ author: Matthias Pfefferle
 post_date: 2010-05-23 17:29:51
 post_excerpt: ""
 layout: post
-permalink: http://openwebpodcast.de/347/owp29/
+permalink: /347/owp29/
 published: true
 enclosure:
   - |
     http://openwebpodcast.de/mp3/openweb29.mp3
     57905280
     audio/mpeg
-    
+
 ---
 Es gibt mal wieder ein paar News:
 
