--- a/_posts/2010-06-05-owp30.md
+++ b/_posts/2010-06-05-owp30.md
@@ -7,14 +7,14 @@ author: Matthias Pfefferle
 post_date: 2010-06-05 18:12:03
 post_excerpt: ""
 layout: post
-permalink: http://openwebpodcast.de/355/owp30/
+permalink: /355/owp30/
 published: true
 enclosure:
   - |
     http://openwebpodcast.de/mp3/openweb30.mp3
     50835584
     audio/mpeg
-    
+
 ---
 Eine kleine Einführung in OAuth 2. Wem OAuth bisher kein Begriff ist, der kann sich ja nochmal <a href="http://blog.openwebpodcast.de/35/episode-3-oauth/">Episode 3</a> anhören.
 
