--- a/_posts/2010-12-03-owp31.md
+++ b/_posts/2010-12-03-owp31.md
@@ -5,14 +5,14 @@ author: Christian Scholz
 post_date: 2010-12-03 22:25:26
 post_excerpt: ""
 layout: post
-permalink: http://openwebpodcast.de/382/owp31/
+permalink: /382/owp31/
 published: true
 enclosure:
   - |
     http://openwebpodcast.de/mp3/openweb31.mp3
     40726656
     audio/mpeg
-    
+
 ---
 Nun ist der Sommer rum und wir können endlich wieder podcasten! Und was liegt näher, als einmal <a href="http://joindiaspora.com">Diaspora</a> anzuschauen?
 
