--- a/_posts/2009-06-21-facebook.md
+++ b/_posts/2009-06-21-facebook.md
@@ -5,14 +5,14 @@ author: Matthias Pfefferle
 post_date: 2009-06-21 17:09:00
 post_excerpt: ""
 layout: post
-permalink: http://openwebpodcast.de/24/facebook/
+permalink: /24/facebook/
 published: true
 enclosure:
   - |
     http://openwebpodcast.de/mp3/openweb12.mp3
     57660317
     audio/mpeg
-    
+
 ---
 In der zwölften Episode reden Christian und ich über die AGB-Änderungen von Facebook und wie die Zukunft von Dezentralen-Services aussehen könnte. Die Folge wurde sogar ein klein wenig philosophisch :)
 
