added audio player

--- a/_posts/2009-06-21-facebook.md
+++ b/_posts/2009-06-21-facebook.md
@@ -18,7 +18,10 @@ In der zwölften Episode reden Christian und ich über die AGB-Änderungen von F
 
 Viel Spaß beim hören...
 
-http://openwebpodcast.de/mp3/openweb12.mp3
+<audio controls>
+  <source src="http://openwebpodcast.de/mp3/openweb12.mp3" type="audio/mpeg">
+  Ihr Browser unterstützt diesen Audio-Player nicht.
+</audio>
 
 Die Links zur Sendung <a href="http://openweb.mixxt.de/networks/wiki/index.episode-12">findet ihr hier</a>!
 
