--- a/_posts/2009-09-30-owp18.md
+++ b/_posts/2009-09-30-owp18.md
@@ -16,7 +16,10 @@ enclosure:
 ---
 In dieser Folge geht es um die Frage, wie offen deutsche soziale Netzwerke sind. Erste Erkenntnis: Nicht so! Aber ob sie es werden wollen, darüber diskutieren wir aufbauend auf dem Panel "Walled Gardens vs. Open Platform" vom Community Summit in Hamburg, das Christian moderierte und das ansonsten mit Sebastian Galonska von studivz und Jason Goldberg von Xing besetzt war.
 
-http://openwebpodcast.de/mp3/openweb18.mp3
+<audio controls>
+  <source src="http://openwebpodcast.de/mp3/openweb18.mp3" type="audio/mpeg">
+  Ihr Browser unterstützt diesen Audio-Player nicht.
+</audio>
 <small>Länge: 1:24h (73,5 MB), <a href="http://openwebpodcast.de/mp3/openweb18.mp3">Download MP3</a></small>
 <h2>Shownotes</h2>
 <ul>
