--- a/_posts/2009-10-07-owp19.md
+++ b/_posts/2009-10-07-owp19.md
@@ -18,7 +18,10 @@ Letzte Woche haben 100.000 Menschen und diejenigen, die sie eingeladen haben, ei
 
 Wir erklären, was Google Wave eigentlich ist und im Groben, wie es funktioniert. Wir klären auf über Waves, Wavelets, Blips, Documents, Wave Server, Wave Clients, Robots, Gadgets und embedded Waves. Oder versuchen es zumindest ;-)
 
-http://openwebpodcast.de/mp3/openweb19.mp3
+<audio controls>
+  <source src="http://openwebpodcast.de/mp3/openweb19.mp3" type="audio/mpeg">
+  Ihr Browser unterstützt diesen Audio-Player nicht.
+</audio>
 <small>Länge: 1:23h (74,1 MB), <a href="http://openwebpodcast.de/mp3/openweb19.mp3">Download MP3</a></small>
 <h3>Die Slides zum Podcast</h3>
 <div id="__ss_2143736" style="width: 425px; text-align: left;"><a style="font:14px Helvetica,Arial,Sans-serif;display:block;margin:12px 0 3px 0;text-decoration:underline;" title="Google Wave Begleitmaterial zum OpenWeb-Podcast Folge 19" href="http://www.slideshare.net/mrtopf/google-wave-begleitmaterial-zum-openwebpodcast-folge-19-2143736">Google Wave Begleitmaterial zum OpenWeb-Podcast Folge 19</a><object style="margin:0px" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="425" height="355" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0"><param name="allowFullScreen" value="true" /><param name="allowScriptAccess" value="always" /><param name="src" value="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=wavepres-091006130822-phpapp02&amp;stripped_title=google-wave-begleitmaterial-zum-openwebpodcast-folge-19-2143736" /><param name="allowfullscreen" value="true" /><embed style="margin:0px" type="application/x-shockwave-flash" width="425" height="355" src="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=wavepres-091006130822-phpapp02&amp;stripped_title=google-wave-begleitmaterial-zum-openwebpodcast-folge-19-2143736" allowscriptaccess="always" allowfullscreen="true"></embed></object>
