--- a/_posts/2009-10-25-owp21.md
+++ b/_posts/2009-10-25-owp21.md
@@ -16,7 +16,10 @@ enclosure:
 ---
 Der OpenWeb-Podcast wird ein Jahr alt, wer hätte das gedacht? Wir natürlich! Daher feiern wir uns und schauen zurück. Ausserdem gibt es ganz viele Hausaufgaben für euch!
 
-http://openwebpodcast.de/mp3/openweb21.mp3
+<audio controls>
+  <source src="http://openwebpodcast.de/mp3/openweb21.mp3" type="audio/mpeg">
+  Ihr Browser unterstützt diesen Audio-Player nicht.
+</audio>
 <small>Länge: 1:16h (67,5 MB), <a href="http://openwebpodcast.de/mp3/openweb21.mp3">Download MP3</a></small>
 
 <h3>Links</h3>
