--- a/_posts/2009-12-24-owp23.md
+++ b/_posts/2009-12-24-owp23.md
@@ -18,7 +18,10 @@ Das OpenWeb-Podcast Team (Sebastian, Christian und Matthias) wünschen euch froh
 
 In der Weihnachts-Folge sprechen Matthias und ich (Christian) nochmal über die OpenWeb-Geschehnisse der letzten Wochen und geben einen kleinen Ausblick auf die Themen die nächstes Jahr relevant sein könnten. Viel Spaß beim hören!
 
-http://openwebpodcast.de/mp3/openweb23.mp3
+<audio controls>
+  <source src="http://openwebpodcast.de/mp3/openweb23.mp3" type="audio/mpeg">
+  Ihr Browser unterstützt diesen Audio-Player nicht.
+</audio>
 <small>Länge: 1:35h (82.4 MB), <a href="http://openwebpodcast.de/mp3/openweb23.mp3">Download MP3</a></small>
 
 News:
