--- a/_posts/2010-02-12-episode-24%e2%80%93foafssl.md
+++ b/_posts/2010-02-12-episode-24%e2%80%93foafssl.md
@@ -18,7 +18,10 @@ Nach einer kleinen Abstinenz haben wir diesmal, wie versprochen, wieder ein Them
 
 Vielen Dank auch an <a href="http://bblfish.net/">Henry Story</a>, dem geistigen Schöpfer von FoaF+SSL, der uns im <a href="http://live.openwebpodcast.de">IRC-Chat</a> mit Rat und Tat zur Seite stand.
 
-http://openwebpodcast.de/mp3/openweb25.mp3
+<audio controls>
+  <source src="http://openwebpodcast.de/mp3/openweb25.mp3" type="audio/mpeg">
+  Ihr Browser unterstützt diesen Audio-Player nicht.
+</audio>
 <small>Länge: 0:55h (47.5 MB), <a href="http://openwebpodcast.de/mp3/openweb25.mp3">Download MP3</a></small>
 
 <h2>News</h2>
