--- a/_posts/2010-04-21-owp27.md
+++ b/_posts/2010-04-21-owp27.md
@@ -18,7 +18,10 @@ Es gab mal wieder einige News, die sich so angesammelt haben. Daher also eine re
 
 Viel Spaß beim Hören:
 
-http://openwebpodcast.de/mp3/openweb27.mp3
+<audio controls>
+  <source src="http://openwebpodcast.de/mp3/openweb27.mp3" type="audio/mpeg">
+  Ihr Browser unterstützt diesen Audio-Player nicht.
+</audio>
 <small>Länge: 1h1m24s (57.1 MB), <a href="http://openwebpodcast.de/mp3/openweb27.mp3">Download MP3</a></small>
 <h3>News</h3>
 <ul>
