--- a/_posts/2010-05-02-owp28.md
+++ b/_posts/2010-05-02-owp28.md
@@ -18,7 +18,10 @@ Wir widmen uns diesmal fast ausschließlich der <a href="http://www.facebook.com
 
 Viel Spaß beim Hören:
 
-http://openwebpodcast.de/mp3/openweb28.mp3
+<audio controls>
+  <source src="http://openwebpodcast.de/mp3/openweb28.mp3" type="audio/mpeg">
+  Ihr Browser unterstützt diesen Audio-Player nicht.
+</audio>
 <small>Länge: 1h2m29s (54.7 MB), <a href="http://openwebpodcast.de/mp3/openweb28.mp3">Download MP3</a></small>
 
 <h3>News</h3>
