--- a/_posts/2010-05-23-owp29.md
+++ b/_posts/2010-05-23-owp29.md
@@ -16,7 +16,10 @@ enclosure:
 ---
 Es gibt mal wieder ein paar News:
 
-http://openwebpodcast.de/mp3/openweb29.mp3
+<audio controls>
+  <source src="http://openwebpodcast.de/mp3/openweb29.mp3" type="audio/mpeg">
+  Ihr Browser unterstützt diesen Audio-Player nicht.
+</audio>
 <small>Länge: 1h02m05s (55.2 MB), <a href="http://openwebpodcast.de/mp3/openweb29.mp3">Download MP3</a></small>
 
 Viel Spaß beim hören :)
