--- a/_posts/2010-06-05-owp30.md
+++ b/_posts/2010-06-05-owp30.md
@@ -18,7 +18,10 @@ enclosure:
 ---
 Eine kleine Einführung in OAuth 2. Wem OAuth bisher kein Begriff ist, der kann sich ja nochmal <a href="http://blog.openwebpodcast.de/35/episode-3-oauth/">Episode 3</a> anhören.
 
-http://openwebpodcast.de/mp3/openweb30.mp3
+<audio controls>
+  <source src="http://openwebpodcast.de/mp3/openweb30.mp3" type="audio/mpeg">
+  Ihr Browser unterstützt diesen Audio-Player nicht.
+</audio>
 <small>Länge: 0h54m40s (48.5 MB), <a href="http://openwebpodcast.de/mp3/openweb30.mp3">Download MP3</a></small>
 
 Viel Spaß beim hören :)
