--- a/_posts/2010-12-03-owp31.md
+++ b/_posts/2010-12-03-owp31.md
@@ -14,11 +14,15 @@ enclosure:
     audio/mpeg
 
 ---
+
 Nun ist der Sommer rum und wir können endlich wieder podcasten! Und was liegt näher, als einmal <a href="http://joindiaspora.com">Diaspora</a> anzuschauen?
 
 Richtig: Nichts! Also los geht's!
 
-http://openwebpodcast.de/mp3/openweb31.mp3
+<audio controls>
+  <source src="http://openwebpodcast.de/mp3/openweb31.mp3" type="audio/mpeg">
+  Ihr Browser unterstützt diesen Audio-Player nicht.
+</audio>
 <small>Länge: 43m, <a href="http://openwebpodcast.de/mp3/openweb31.mp3">Download MP3</a></small>
 
 <div class="fblink">
