some more changes

--- a/_posts/2010-12-03-owp31.md
+++ b/_posts/2010-12-03-owp31.md
@@ -5,14 +5,12 @@ author: Christian Scholz
 post_date: 2010-12-03 22:25:26
 post_excerpt: ""
 layout: post
-permalink: /382/owp31/
+permalink: 382/owp31/
 published: true
 enclosure:
-  - |
-    http://openwebpodcast.de/mp3/openweb31.mp3
-    40726656
-    audio/mpeg
-
+  - http://openwebpodcast.de/mp3/openweb31.mp3
+  - 40726656
+  - audio/mpeg
 ---
 
 Nun ist der Sommer rum und wir können endlich wieder podcasten! Und was liegt näher, als einmal <a href="http://joindiaspora.com">Diaspora</a> anzuschauen?
@@ -23,6 +21,7 @@ Richtig: Nichts! Also los geht's!
   <source src="http://openwebpodcast.de/mp3/openweb31.mp3" type="audio/mpeg">
   Ihr Browser unterstützt diesen Audio-Player nicht.
 </audio>
+
 <small>Länge: 43m, <a href="http://openwebpodcast.de/mp3/openweb31.mp3">Download MP3</a></small>
 
 <div class="fblink">
